Sync No-DB da MacBook-Pro-M1.local - 17/02/2026 08:03

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ frontend/src/assets/media/
 frontend/public/media/
 .DS_Store
 data_sync.sql
+
+# DDEV: Sincronizza config ma non i dati pesanti
+.ddev/.dbbackups/
+.ddev/import-db*
+.ddev/db-build/
