--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "autoprefixer": "^10.4.24",
     "axios": "^1.7.9",
-    "postcss": "^8.5.6",
+    "lucide-react": "^0.569.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "vite": "^6.0.0"
+    "vite": "^6.4.1"
   },
   "overrides": {
     "react": "$react",
